Bug 111809 - ICL+ Display broken (Different colors in the screen)
Summary: ICL+ Display broken (Different colors in the screen)
Status: RESOLVED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: DRI git
Hardware: Other All
: highest critical
Assignee: Swati Sharma
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard: ReadyForDev
Keywords: regression
Depends on:
Blocks:
 
Reported: 2019-09-25 05:37 UTC by Jani Saarinen
Modified: 2019-09-25 08:37 UTC (History)
1 user (show)

See Also:
i915 platform: ICL, TGL
i915 features:


Attachments

Description Jani Saarinen 2019-09-25 05:37:01 UTC
There was regression on drm-tip CI_DRM_6936 where these patches were on that build: https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_6936/git-log-oneline.txt.
Previous build was https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_6935/git-log-oneline.txt that has working colors
Comment 1 Jani Saarinen 2019-09-25 05:39:44 UTC
For this there is already revert: https://patchwork.freedesktop.org/series/67174/

and with that screen is again normal. Tested on TGL.
Comment 2 Jani Nikula 2019-09-25 08:37:45 UTC
1b8588741fdc ("Revert "drm/i915/color: Extract icl_read_luts()"")


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.